--- a/SDTechTree/SDTechTree_Part-Optional-Upgrades.cfg
+++ b/SDTechTree/SDTechTree_Part-Optional-Upgrades.cfg
@@ -44,4 +44,53 @@ PARTUPGRADE
 
 //rocket engine spool speeds
 
+//@PART[engine]
+//{
+//	@MODULE[ModuleEnginesFX]
+//	{
+//		useEngineResponseTime = True
+//		engineAccelerationSpeed = 
+		//lower values for large engines, higher value for smaller engines, lander engines, and pressure fed engines
+//		engineDecelerationSpeed = 
+//
+//		UPGRADES
+//		{
+//			UPGRADE
+//			{
+//				name__ = 
+//				description__ = 
+//				engineAccelerationSpeed = 
+//				engineDecelerationSpeed = 
+//			}
+//		}
+//	}
+
+
+
+
+//PARTUPGRADE
+//{
+//	name = SD-Liquid-Throttle
+//	partIcon = 
+//	techRequired = 
+//	entryCost = 
+//	cost = 0
+//	title = 
+//	basicInfo = Our liquid fueled engines respond more quickly now *Optional Tech*
+//	manufacturer = Research & Development Department
+//	description = We've made some adjustments to the turbopumps and fuel valves in a number of our liquid fueled engines. You should get more responsive throttle control out of them now.
+//}
+
 //rocket minimum thrust
+
+
+
+
+
+
+
+
+
+
+
+
