--- a/SDTechTree/SDTechTree_Part-Upgrades-Implementation.cfg
+++ b/SDTechTree/SDTechTree_Part-Upgrades-Implementation.cfg
@@ -260,25 +260,25 @@
 
 //liquid engine upgrade stats
 //------------------------------------------------------------------------------------------------------\\
-@PART[*]:HAS[@MODULE[ModuleGimbal]&!MODULE[MultiModeEngine]]
-{
-	@MODULE[ModuleGimbal]
-	{
-		moduleIsEnabled = false
-		hideUIwhenUnavailable = true
-		
-		UPGRADES
-		{
-			UPGRADE
-			{
-				name__ = SD-Liquid-gimbals1
-				description__ = engine can now gimbal
-				moduleIsEnabled = true
-				hideUIwhenUnavailable = false
-			}
-		}
-	}
-}
+//@PART[*]:HAS[@MODULE[ModuleGimbal]&!MODULE[MultiModeEngine]]
+//{
+//	@MODULE[ModuleGimbal]
+//	{
+//		moduleIsEnabled = false
+//		hideUIwhenUnavailable = true
+//		
+//		UPGRADES
+//		{
+//			UPGRADE
+//			{
+//				name__ = SD-Liquid-gimbals1
+//				description__ = engine can now gimbal
+//				moduleIsEnabled = true
+//				hideUIwhenUnavailable = false
+//			}
+//		}
+//	}
+//}
 
 //LV-1R nerfs and upgrades
 @PART[radialEngineMini]:FOR[ShamashDevelopments]
@@ -326,6 +326,36 @@
 					key = 8 0.001
 				}
 				//vac ISP 100%, ASL ISP 100%
+			}
+		}
+	}
+	@MODULE[ModuleGimbal]
+	{
+		gimbalRange = 2
+		//moduleIsEnabled = false
+		//hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals1
+				description__ = gimbal now 5 degrees
+				gimbalRange = 5
+				//moduleIsEnabled = true
+				//hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 8 degrees
+				gimbalRange = 8
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 10 degrees
+				gimbalRange = 10
 			}
 		}
 	}
@@ -382,20 +412,36 @@
 			}
 		}
 	}
-//	@MODULE[ModuleGimbal]
-//	{
-//		@gimbalRange = 1
-//		
-//		UPGRADES
-//		{
-//			UPGRADE
-//			{
-//				name__ = SD-Liquid-gimbals1
-//				description__ = now +- 8 degrees
-//				gimbalRange = 8
-//			}
-//		}
-//	}
+	@MODULE[ModuleGimbal]
+	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals1
+				description__ = gimbal now 4 degrees
+				gimbalRange = 4
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 6 degrees
+				gimbalRange = 6
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 8 degrees
+				gimbalRange = 8
+			}
+		}
+	}
 }
 
 //RD-107 nerfs and upgrades
@@ -648,6 +694,30 @@
 			}
 		}
 	}
+	@MODULE[ModuleGimbal]
+	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 2 degrees
+				gimbalRange = 2
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 3 degrees
+				gimbalRange = 3
+			}
+		}
+	}
 }
 
 //MK-55 nerfs and upgrades
@@ -742,9 +812,29 @@
 		}
 				
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 3 degrees
+				gimbalRange = 3
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 8 degrees
+				gimbalRange = 8
+			}
+		}
 	}
 }
 
@@ -818,9 +908,35 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 5
+		//moduleIsEnabled = false
+		//hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals1
+				description__ = gimbal now 10 degrees
+				gimbalRange = 10
+				//moduleIsEnabled = true
+				//hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 15 degrees
+				gimbalRange = 15
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 22.5 degrees
+				gimbalRange = 22.5
+			}
+		}
 	}
 }
 
@@ -901,9 +1017,35 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals1
+				description__ = gimbal now 2 degrees
+				gimbalRange = 2
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 3 degrees
+				gimbalRange = 3
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 3 degrees
+				gimbalRange = 3
+			}
+		}
 	}
 }
 
@@ -911,22 +1053,22 @@
 @PART[LiquidEngineLV-TX87]
 {
 	//second gimbal upgrade fix
-	@MODULE[ModuleGimbal],1
-	{
-		moduleIsEnabled = false
-		hideUIwhenUnavailable = true
-
-		UPGRADES
-		{
-			UPGRADE
-			{
-				name__ = SD-Liquid-gimbals1
-				description__ = engine can now gimbal
-				moduleIsEnabled = true
-				hideUIwhenUnavailable = flase
-			}
-		}
-	}
+//	@MODULE[ModuleGimbal],1
+//	{
+//		moduleIsEnabled = false
+//		hideUIwhenUnavailable = true
+//
+//		UPGRADES
+//		{
+//			UPGRADE
+//			{
+//				name__ = SD-Liquid-gimbals1
+//				description__ = engine can now gimbal
+//				moduleIsEnabled = true
+//				hideUIwhenUnavailable = flase
+//			}
+//		}
+//	}
 	//engine performance fix
 	@MODULE[ModuleEngines]
 	{
@@ -1002,9 +1144,53 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 2.5 degrees
+				gimbalRange = 2.5
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 5 degrees
+				gimbalRange = 5
+			}
+		}
+	}
+	@MODULE[ModuleGimbal],1
+	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 2.5 degrees
+				gimbalRange = 2.5
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 5 degrees
+				gimbalRange = 5
+			}
+		}
 	}
 }
 
@@ -1085,9 +1271,23 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 2 degrees
+				gimbalRange = 2
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+		}
 	}
 }
 
@@ -1168,9 +1368,29 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals1
+				description__ = gimbal now 2 degrees
+				gimbalRange = 2
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 4 degrees
+				gimbalRange = 4
+			}
+		}
 	}
 }
 
@@ -1251,10 +1471,6 @@
 			}
 		}
 	}
-	
-	@MODULE[ModuleGimbal]
-	{
-	}
 }
 
 //O-10 nerfs and upgrades
@@ -1334,9 +1550,35 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals1
+				description__ = gimbal now 3 degrees
+				gimbalRange = 3
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 5 degrees
+				gimbalRange = 5
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 6 degrees
+				gimbalRange = 6
+			}
+		}
 	}
 }
 
@@ -1401,6 +1643,24 @@
 					key = 6 0.001
 				}
 				//vac 100%, ASL 100%
+			}
+		}
+	}
+	@MODULE[ModuleGimbal]
+	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 2 degrees
+				gimbalRange = 2
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
 			}
 		}
 	}
@@ -1469,9 +1729,23 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 5 degrees
+				gimbalRange = 5
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+		}
 	}
 }
 
@@ -1552,9 +1826,29 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 2 degrees
+				gimbalRange = 2
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 3 degrees
+				gimbalRange = 3
+			}
+		}
 	}
 }
 
@@ -1622,9 +1916,23 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 2 degrees
+				gimbalRange = 2
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+		}
 	}
 }
 
@@ -1691,9 +1999,23 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 1.5 degrees
+				gimbalRange = 1.5
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+		}
 	}
 }
 
@@ -1761,9 +2083,29 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+	
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 2 degrees
+				gimbalRange = 2
+				//moduleIsEnabled = true
+				//hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 4.5 degrees
+				gimbalRange = 4.5
+			}
+		}
 	}
 }
 
@@ -1817,9 +2159,23 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 10.5 degrees
+				gimbalRange = 10.5
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+		}
 	}
 }
 
@@ -1872,14 +2228,28 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals1
+				description__ = gimbal now 2 degrees
+				gimbalRange = 2
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+		}
 	}
 }
 
 //aerospike nerfs and upgrades
-@PART[toroidialAerospike]
+@PART[toroidalAerospike]
 {
 	@MODULE[ModuleEngines]
 	{
@@ -1967,9 +2337,23 @@
 			}
 		}
 	}
-	
 	@MODULE[ModuleGimbal]
 	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 4 degrees
+				gimbalRange = 4
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+		}
 	}
 }
 
@@ -2036,10 +2420,35 @@
 			}
 		}
 	}
+	@MODULE[ModuleGimbal]
+	{
+		gimbalRange = 0
+		moduleIsEnabled = false
+		hideUIwhenUnavailable = true
+		
+		UPGRADES
+		{
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals2
+				description__ = gimbal now 2 degrees
+				gimbalRange = 2
+				moduleIsEnabled = true
+				hideUIwhenUnavailable = false
+			}
+			UPGRADE
+			{
+				name__ = SD-Liquid-gimbals3
+				description__ = gimbal now 3 degrees
+				gimbalRange = 3
+			}
+		}
+	}
 }
 
 
 //ion engine nerfs and upgrades
+//------------------------------------------------------------------------------------------------------\\
 @PART[ionEngine]
 {
 	@MODULE[ModuleEnginesFX]
