--- a/SDTechTree/SDTechTree_UpgradeDefinitions.cfg
+++ b/SDTechTree/SDTechTree_UpgradeDefinitions.cfg
@@ -93,18 +93,18 @@ PARTUPGRADE
 	manufacturer = Research & Development Department
 	description = Better tubine designs and lower friction bearings have been the topic of nearly every conversation among the R&D staff recently. By forcing fuel into our engines at higher pressures, we can eek out more thrust and better efficiency and we believe we've quite nearly closed in on a way of doing it without blowing the engine to smithereens.
 }
-PARTUPGRADE
-{
-	name = SD-Liquid-gimbals1
-	partIcon = smallRadialEngine
-	techRequired = gimbals
-	entryCost = 4500
-	cost = 0
-	title = Engine hydraulics
-	basicInfo = Turns out turning a firing rocket engine with turbopumps and all takes a bit of force.
-	manufacturer = Research & Development Department
-	description = We're quite proud to report that, with the design of some new, jointed tubing and the installation of better hydraulic systems run off a diverter valve from the fuel lines to provide the nessecary pressure, we've been able to devise a mechanism to turn even our most massive rocket engines. We'd also like appologize to whom ever owns the car from which we "borrowed" the first set of test articles. At you're request, the R&D team is willing to assign one of the engineering interns to find and install new, less explodified replacement hydraulics for you.
-}
+//PARTUPGRADE
+//{
+//	name = SD-Liquid-gimbals1
+//	partIcon = smallRadialEngine
+//	techRequired = gimbals
+//	entryCost = 4500
+//	cost = 0
+//	title = Engine hydraulics
+//	basicInfo = Turns out turning a firing rocket engine with turbopumps and all takes a bit of force.
+//	manufacturer = Research & Development Department
+//	description = We're quite proud to report that, with the design of some new, jointed tubing and the installation of better hydraulic systems run off a diverter valve from the fuel lines to provide the nessecary pressure, we've been able to devise a mechanism to turn even our most massive rocket engines. We'd also like appologize to whom ever owns the car from which we "borrowed" the first set of test articles. At you're request, the R&D team is willing to assign one of the engineering interns to find and install new, less explodified replacement hydraulics for you.
+//}
 PARTUPGRADE
 {
 	name = SD-Liquid3
@@ -152,6 +152,47 @@ PARTUPGRADE
 	basicInfo = Bring the WolfHound back to stock settings
 	manufacturer = Squad
 	description = Stock settings for the Wolfhound.
+}
+
+//engine gimbals
+//------------------------------------------------------------------------------------------------------\\
+PARTUPGRADE
+{
+	name = SD-Liquid-gimbals1
+	partIcon = radialEngineMini
+	techRequired = basicRocketry
+	entryCost = 4500
+	cost = 0
+	title = Basic gimballing systems
+	basicInfo = We've grasped the fundementals of how one vectors a rocket nozzle.
+	manufacturer = Research & Development Department
+	description = Flexible tubing and some clever mounting bracket designs combined with some linear actuators will allow us to actuate some of our rocket motor combusion chambers. This should allow us to steer the rocket with little more than the main engine... or, perhaps more likely some smaller side engines, "a vernier engine", as we've come to call them. We're still working on a gimbal mount that can take more than a dozen some odd kN without buckling.
+}
+
+PARTUPGRADE
+{
+	name = SD-Liquid-gimbals2
+	partIcon = liquidEngine2
+	techRequired = gimbals
+	entryCost = 18000
+	cost = 0
+	title = Better gimbals
+	basicInfo = We've made improvements to support higher actuation ranges and thrusts.
+	manufacturer = Research & Development Department
+	description = These newer mounts and hydraulic systems should allow us to vector larger, more energetic engines wihtout worrying about said engine coming free of its mounting bracket and smashing through the propellant tank above it... we ask you not to ask why we bring that particular example up, merely to trust us when we say it will never happen again...
+}
+
+PARTUPGRADE
+{
+	name = SD-Liquid-gimbals3
+	partIcon = SSME
+	techRequired = massiveLift
+	entryCost = 72000
+	cost = 0
+	title = High performance gimbals
+	basicInfo = These actuation mechanisms should be able to take whatever our rocket engines can throw at them.
+	manufacturer = Research & Development Department
+	description = We've devised some pretty cool new engine mounts that simultaniously allow for large ranges of movement and will support the force some of our larger engines put out without buckling or locking.
 }
 
 //ion engine
