--- a/SDTechTree/SDTechTree_Part-Upgrades-Implementation.cfg
+++ b/SDTechTree/SDTechTree_Part-Upgrades-Implementation.cfg
@@ -42,7 +42,7 @@
 }
 
 //Flea booster nerf and upgrades
-@PART[solidBooster_sm]
+@PART[solidBooster_sm|solidBooster_sm_v2]
 {
 	@MODULE[ModuleEngines]
 	{
@@ -105,7 +105,7 @@
 }
 
 //Hammer booster nerfs and upgrades
-@PART[solidBooster]
+@PART[solidBooster|solidBooster_v2]
 {
 	@MODULE[ModuleEngines]
 	{
@@ -2849,7 +2849,7 @@
 //}
 
 //parts with 0.3 kNm torque
-@PART[probeCoreOcto]
+@PART[probeCoreOcto|probeCoreOcto_v2]
 {
 	@MODULE[ModuleReactionWheel]
 	{
@@ -2883,7 +2883,7 @@
 }
 
 //parts with 0.5 kNm torque
-@PART[probeCoreHex|probeStackSmall]
+@PART[probeCoreHex|probeStackSmall|probeCoreHex_v2]
 {
 	@MODULE[ModuleReactionWheel]
 	{
@@ -2985,7 +2985,7 @@
 }
 
 //parts with 5 kNm torque
-@PART[mk1pod|Mk2Pod|sasModule]
+@PART[mk1pod|Mk2Pod|sasModule|mk1pod_v2]
 {
 	@MODULE[ModuleReactionWheel]
 	{
