--- a/SDTechTree/SDTechTree_Parts.cfg
+++ b/SDTechTree/SDTechTree_Parts.cfg
@@ -1,14 +1,14 @@
 //Shamash Designs custom tech tree part assignment
 //Entry costs for tier zero are set to 0, other entry costs will need to be examined and possibly reassigned on a part-by-part basis.
 
-//@PART[*]:HAS[!MODULE[ModuleAsteroid]]:FIRST
+//@PART[*]:HAS[!MODULE[ModuleAsteroid]|!TechHidden = True]:FIRST
 //	{
 //		@TechRequired = debug
 //	}
 
 
 //tier 0, start
-@PART[mk1pod|kv1Pod|solidBooster_sm|parachuteSingle|basicFin|sensorThermometer]:FOR[ShamashDevelopments]
+@PART[mk1pod|kv1Pod|solidBooster_sm|parachuteSingle|basicFin|sensorThermometer|mk1pod_v2|solidBooster_sm_v2]:FOR[ShamashDevelopments]
 //SRM thrust and ISP upgrade
 	{
 		@TechRequired = start
@@ -16,7 +16,7 @@
 	}
 
 //tier 1, intro rocketry, basicRocketry
-@PART[miniFuelTank|fuelTankSmallFlat|fairingSize1|Decoupler_0|Decoupler_1|solidBooster|radialEngineMini|sepMotor1|winglet]:FOR[ShamashDevelopments]
+@PART[miniFuelTank|fuelTankSmallFlat|fairingSize1|Decoupler_0|Decoupler_1|solidBooster|radialEngineMini|sepMotor1|winglet|solidBooster_v2]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = basicRocketry
 	}
@@ -28,7 +28,7 @@
 	}
 
 //tier 1, intro engineering, introEGR
-@PART[probeCoreSphere|batteryPack|trussPiece1x|ServiceBay_125|noseCone|Separator_0|SurfAntenna|ladder1|HeatShield1|adapterSmallMiniTall|radialDecoupler|launchClamp1]:FOR[ShamashDevelopments]
+@PART[probeCoreSphere|batteryPack|trussPiece1x|ServiceBay_125|noseCone|Separator_0|SurfAntenna|ladder1|HeatShield1|adapterSmallMiniTall|probeCoreSphere_v2]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = introEGR
 	}
@@ -68,7 +68,7 @@
 	}
 
 //tier 2, simple structures, simpleStructures
-@PART[EquiTriangle0|Panel0|Triangle0|strutCube|strutOcto|Tube1|trussAdapter|adapterSmallMiniShort|Separator_1|stackBiCoupler|stackPoint1]:FOR[ShamashDevelopments]
+@PART[EquiTriangle0|Panel0|Triangle0|strutCube|strutOcto|Tube1|trussAdapter|adapterSmallMiniShort|Separator_1|stackBiCoupler|stackPoint1|radialDecoupler|launchClamp1]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = simpleStructures
 	}
@@ -137,13 +137,13 @@
 	}
 
 //tier 3, electrical systems, electricalSystems
-@PART[solarPanels5|batteryBankMini|ksp_r_largeBatteryPack|radPanelSm|roverWheelM1-F]:FOR[ShamashDevelopments]
+@PART[solarPanels5|batteryBankMini|ksp_r_largeBatteryPack|radPanelSm|roverWheelM1-F|kv2Pod]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = electricalSystems
 	}
 
 //tier 3, guidance systems, guidance
-@PART[probeCoreOcto|sasModule]:FOR[ShamashDevelopments]
+@PART[probeCoreOcto|sasModule|probeCoreOcto_v2]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = guidance
 	}
@@ -213,19 +213,19 @@
 	}
 
 //tier 4, large electrical systems, largeElectrical
-@PART[LgRadialSolarPanel|batteryBank|radPanelLg|radPanelEdge|foldingRadSmall|FuelCellArray|roverWheel1]:FOR[ShamashDevelopments]
+@PART[LgRadialSolarPanel|batteryBank|radPanelLg|radPanelEdge|foldingRadSmall|FuelCellArray|roverWheel1|solarPanels4|solarPanels3]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = largeElectrical
 	}
 
 //tier 4, advanced space flight, advSpaceFlight
-@PART[Mk2Pod|kv2Pod|HeatShield1p5|ServiceModule18|parachuteRadial]:FOR[ShamashDevelopments]
+@PART[Mk2Pod|HeatShield1p5|ServiceModule18|parachuteRadial|kv3Pod]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = advSpaceFlight
 	}
 
 //tier 4, better guidance, betterGuidance
-@PART[probeCoreHex|sensorAccelerometer]:FOR[ShamashDevelopments]
+@PART[probeCoreHex|sensorAccelerometer|probeCoreHex_v2]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = betterGuidance
 	}
@@ -292,7 +292,7 @@
 	}
 
 //tier 5, deployable panels, largeSolar
-@PART[solarPanels4|solarPanels3|solarPanels2|solarPanels1|foldingRadMed]:FOR[ShamashDevelopments]
+@PART[solarPanels2|solarPanels1|foldingRadMed]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = largeSolar
 	}
@@ -304,7 +304,7 @@
 	}
 
 //tier 5, specialized guidance, specializedGuidance
-@PART[probeCoreCube|probeCoreOcto2|avionicsNoseCone]:FOR[ShamashDevelopments]
+@PART[probeCoreCube|probeCoreOcto2|avionicsNoseCone|probeCoreOcto2_v2]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = specializedGuidance
 	}
@@ -316,7 +316,7 @@
 	}
 
 //tier 5, scanning tech, scanning
-@PART[roverBody|SurveyScanner|SurfaceScanner|InfraredTelescope|sensorAtmosphere]:FOR[ShamashDevelopments]
+@PART[roverBody|SurveyScanner|SurfaceScanner|InfraredTelescope|sensorAtmosphere|roverBody_v2]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = scanning
 	}
@@ -379,7 +379,7 @@
 	}
 
 //tier 6, sophisticated space flight, sophisticatedSpaceFlight
-@PART[mk1-3pod|kv3Pod|HeatShield2|Size1to0ServiceModule|ServiceModule25|LaunchEscapeSystem|parachuteLarge|parachuteDrogue]:FOR[ShamashDevelopments]
+@PART[mk1-3pod|HeatShield2|Size1to0ServiceModule|ServiceModule25|LaunchEscapeSystem|parachuteLarge|parachuteDrogue]:FOR[ShamashDevelopments]
 	{
 		@TechRequired = sophisticatedSpaceFlight
 	}
