--- a/SDTechTree/SDTechTree_Structure.cfg
+++ b/SDTechTree/SDTechTree_Structure.cfg
@@ -184,7 +184,7 @@
 	{
 		@id = fuselageDesign
 		@title = Fuselage Design
-		@description = Some new and shiny parts to build your puny planes out of. Don't worry, we're already working on something more substantial, but until its ready, these will simply have to do.
+		@description = After many clausterphobic tests, we've determined that fitting a pilot and passengers into a mk-0 fuselage design is somewhat impractical, so we've scaled our designs up to comply with our existing mk-1 profile. Turns out leg room is suprisingly important for crew comfort.
 		@cost = 30
 		@hideEmpty = False
 		@nodeName = node2_fuselageDesign
@@ -264,7 +264,7 @@
 	{
 		@id = pumpEfficiency
 		@title = Pump Efficiency
-		@description = One of our engineering was tinkering with the coolant pump on one of the R&D computers when it occurred to him that some of the "special modifications" he made to that system may also be applicable to the turbopumps inside our liquid fueled engines.
+		@description = One of our engineers was tinkering with the, quite frankly exceedingly overengineered coolant system on one of the R&D computers when it occurred to him that some of the "special modifications" he made to it may also be applicable to the turbopumps inside our liquid fueled engines.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_pumpEfficiency
@@ -304,7 +304,7 @@
 	{
 		@id = bigFuel
 		@title = Big Fuel Containers
-		@description = Larger tanks for larger rockets. We are mostly confident that the fuel shouldn't slosh in these ones, but just to be sure, it's probably best to assume a minimum safe distance before launch.
+		@description = Larger tanks for larger rockets. We are mostly confident that the fuel shouldn't slosh in these ones, but just to be sure, it's probably best to assume a sizable minimum safe distance before launch.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_bigFuel
@@ -350,7 +350,7 @@
 	{
 		@id = advWingDesign
 		@title = Advanced Wing Design
-		@description = The engineering and science team has been putting a great deal of thought into the effects of flying an aircraft faster than the speed of sound. Together, they've listed and built some shapes they think would be interesting to see fly at those speeds.
+		@description = The engineering and science team has been putting a great deal of thought into the effects of flying an aircraft faster than the speed of sound. Together, they've built some shapes they think would be interesting to see fly at those speeds.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_advWingDesign
@@ -370,7 +370,7 @@
 	{
 		@id = improvedIntakes
 		@title = Improved Intakes
-		@description = With engines who's performance is predicated by air, it's only natural to wonder how we might get them even more air. To that end, we've been studying exactly how our jet engines work and devised some tweaks that may make them work better as well as some air intakes you may find interesting.
+		@description = With engines who's performance is predicated by air, it's only natural to wonder how we might get them even more air. To that end, we've been studying exactly how our jet engines work and devised some tweaks that may make them work better as well as designed some new air intakes you may find interesting.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_improvedIntakes
@@ -476,7 +476,7 @@
 	{
 		@id = scienceSystems
 		@title = Science Systems
-		@description = Through some computer wizardry, one of our interns managed to find a way to make our vessels in flight able to efficiently relay signals. This could be the start a major breakthrough in telecommunications ushering in a new era of world connectivity. Oh, and we've also shoved some weird, probably expired jam said intern found in the back of the break room frige into a container for you to send to space. We're rather excited to see what happens to it.
+		@description = One of our interns has design a rather interesting system to reflect signals from one dish to another. This could be the start a major breakthrough in telecommunications. Oh, and we've also shoved some weird, probably expired jam said intern found in the back of the breakroom frige into a container for you to send to space. We're very excited to see what happens to it.
 		@cost = 90
 		@hideEmpty = False
 		@nodeName = node3_scienceSystems
@@ -536,7 +536,7 @@
 	{
 		@id = vacuum
 		@title = Vacuum Engines
-		@description = An assortment of engines that have been optimized to operate in or near vacuum conditions. They might not be the most powerful, but they'll get you where you need to go for less fuel. They're also deeply throttlable and ignite easily and reliably, making for great landing engines.
+		@description = An assortment of engines boasting bells that have been optimized to operate in or near vacuum conditions. They might not be the most powerful, but they'll get you where you need to go for less fuel. They're also deeply throttlable and ignite easily and reliably, making for great landing engines.
 		@cost = 170
 		@hideEmpty = False
 		@nodeName = node4_vacuum
@@ -762,7 +762,7 @@
 	{
 		@id = improvedComms
 		@title = Improved Science Systems
-		@description = Some studies done by a few of our scientists suggest a way we could push more data through our comms antenna without changing their form-factor or power consumption.
+		@description = Some studies done by a few of our scientists suggest a way we could tune our antenna hardware in order to push more data through without changing the form-factor or power consumption.
 		@cost = 170
 		@hideEmpty = False
 		@nodeName = node4_improvedComms
@@ -948,7 +948,7 @@
 	{
 		@id = heavyFuselage
 		@title = Heavy Fuselage Design
-		@description = While they might not look all too remarkable at a first pass, in most respect other than their obscene size, we've designed these colossal aircraft parts to take an absolute beating.
+		@description = While they might not look all too remarkable at a first pass in most respect other than their obscene size, we've designed these colossal aircraft parts to take an absolute beating.
 		@cost = 330
 		@hideEmpty = False
 		@nodeName = node5_heavyFuselage
@@ -1395,7 +1395,7 @@
 	{
 		id = mining
 		title = Mining Technology
-		description = We've developed sensors capable of detecting and measuring useful materials in the crusts of planets and moons all over the solar system. With these new devices our vehicles will be capable of extracting it and converting it in-situ to propellant to fuel our exploration of the universe. No longer are we reliant purely on the refineries on Kerbin to fill our tanks.
+		description = We've already developed sensors capable of detecting and measuring useful materials in the crusts of planets and moons all over the solar system. Now, with these new drills and refineries our vehicles will be capable of extracting it and converting it in-situ to propellant to fuel our exploration of the universe. Unfortunately, they do tend to get a little warm when running, so make sure to pack adequate cooling systems and a competent engineer if you plan to refine any substantial amount of propellant.
 		cost = 450
 		hideEmpty = False
 		nodeName = node6_mining
@@ -1667,7 +1667,7 @@
 	{
 		id = largeMining
 		title = Large Mining Systems
-		description = Bigger drills, refineries, and ore tanks will allow us the abilitly to build even larger mining facilities on the surfaces of planets, moons, and, with the application of our new grasping mechanism, asteroids.
+		description = Bigger drills, refineries, and ore tanks will allow us the abilitly to build even larger and more efficient mining facilities on the surfaces of planets, moons, and, with the application of our new grasping mechanism, asteroids.
 		cost = 750
 		hideEmpty = False
 		nodeName = node7_largeMining
@@ -1724,7 +1724,7 @@
 	{
 		id = atomicPropulsion
 		title = Nuclear Propulsion
-		description = A break in one of the coolant lines in an experimental nuclear reactor inspired this particular piece of technology. An engine that works not off chemical reactions, but the thermal powers of nuclear fission. Hopefully no one will call us out on potenailly violating multiple enviornmental and weapons treaties by packing several tonnes of nuclear fission material on the front of our rocket.
+		description = A break in one of the coolant lines in an experimental nuclear reactor inspired this particular piece of technology. An engine that works not off chemical reactions, but the thermal powers of nuclear fission. Hopefully no one will call us out on potenailly violating multiple enviornmental and weapons treaties by packing several tonnes of nuclear fissile material on the front of our rocket.
 		cost = 1000
 		hideEmpty = False
 		nodeName = node8_atomicPropulsion
@@ -1824,8 +1824,8 @@
 //	RDNode
 //	{
 //		id = debug
-//		title = The Island of Misfit Toys
-//		description = If this node shows up in your game, either the mod author has done something wrong or you've installed an unsupported parts mod.
+//		title = The Island of Misfit Parts
+//		description = If this node shows up in your game, either the mod author has done something wrong or you've installed an unsupported part mod.
 //		cost = 9000
 //		hideEmpty = True
 //		nodeName = node0_debug
